# updateServer

./: .autotools  .cproject  .project  NEWS  README  configure.ac
src/: CMakeLists.txt  UpgradeServer.cpp  main.cpp
src/.kdev4/: src.kdev4
src/include/: UpgradeServer.h  protocol.h
